--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
 		"babel-preset-react-native": "1.9.0",
 		"jest": "17.0.1",
 		"jest-react-native": "17.0.1",
-		"react-test-renderer": "~15.3.1"
+		"react-test-renderer": "~15.3.1",
+		"eslint": "^3.9.1",
+    "eslint-plugin-import": "^2.1.0",
+    "eslint-plugin-react": "^6.5.0",
+    "eslint-watch": "^2.1.14"
 	},
 	"jest": {
 		"preset": "jest-react-native"
