--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-	"name": "Pithre",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "~15.3.1",
-		"react-native": "0.37.0"
-	},
-	"devDependencies": {
-		"babel-jest": "17.0.0",
-		"babel-preset-react-native": "1.9.0",
-		"jest": "17.0.1",
-		"jest-react-native": "17.0.1",
-		"react-test-renderer": "~15.3.1",
-		"eslint": "^3.9.1",
+  "name": "Pithre",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@exponent/ex-navigation": "^2.1.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "react": "~15.3.1",
+    "react-native": "0.37.0"
+  },
+  "devDependencies": {
+    "babel-jest": "17.0.0",
+    "babel-preset-react-native": "1.9.0",
+    "jest": "17.0.1",
+    "jest-react-native": "17.0.1",
+    "react-test-renderer": "~15.3.1",
+    "eslint": "^3.9.1",
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-react": "^6.5.0",
     "eslint-watch": "^2.1.14"
-	},
-	"jest": {
-		"preset": "jest-react-native"
-	}
+  },
+  "jest": {
+    "preset": "jest-react-native"
+  }
 }
