--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@exponent/ex-navigation": "^2.1.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "~15.3.1",
-    "react-native": "0.37.0"
+    "react-native": "0.37.0",
+    "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
     "babel-jest": "17.0.0",
