--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "~15.3.1",
     "react-native": "0.37.0",
+    "react-native-dropdown": "0.0.6",
+    "react-native-swiper": "^1.5.3",
     "react-native-vector-icons": "^3.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.0",
     "babel-jest": "17.0.0",
     "babel-preset-react-native": "1.9.0",
-    "jest": "17.0.1",
-    "jest-react-native": "17.0.1",
-    "react-test-renderer": "~15.3.1",
     "eslint": "^3.9.1",
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-react": "^6.5.0",
-    "eslint-watch": "^2.1.14"
+    "eslint-watch": "^2.1.14",
+    "jest": "17.0.1",
+    "jest-react-native": "17.0.1",
+    "react-test-renderer": "~15.3.1"
   },
   "jest": {
     "preset": "jest-react-native"
