--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.15.2",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "lodash": "^4.17.2",
-    "react": "~15.3.1",
-    "react-native": "0.37.0",
+    "react": "^15.3.2",
+    "react-native": "^0.38.0",
     "react-native-app-intro": "^1.1.5",
     "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.6.3",
