--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-app-intro": "^1.1.5",
     "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.6.3",
+    "react-native-menu": "^0.20.2",
     "react-native-swiper": "^1.5.3",
     "react-native-vector-icons": "^3.0.0"
   },
