--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-dropdown": "0.0.6",
     "react-native-elements": "^0.6.3",
     "react-native-menu": "^0.20.2",
+    "react-native-radio-buttons": "^0.13.0",
     "react-native-swiper": "^1.5.3",
     "react-native-vector-icons": "^3.0.0"
   },
